--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -349,9 +349,16 @@ INCLUDE SOME INTERVIEW DATA IF USEFUL.
 IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC.
 
 WHICH DESIGN AIM / FEATURE?
+
+A BIT MOE OF A SUMMARY..
+
+The use of a template aligned with half-baked approach helped by introducing coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities.
+
+The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games and set a path of working in a smaller group.
+
 While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support. This chapter's vignette (Appendix 5.toby), where Toby designs many levels as a way of making his game distinct from others, illustrates the impact of this technical adaptation on the evolution of social coding processes a theme which is explored in more detail in a following section.
 
-The introduction of a half-baked template and the UMC approach had the unintended consequence of reducing the average working group size and also helped by introducing coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities. The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games and set a path of working in a smaller group. A negative consequence of smaller group sizes and thus having more games being worked on was the increased demand on my time as a technical troubleshooter for code problems. The following section addresses this tension and others related to the introduction of supporting forms of documentation.
+
 
 
 <!-- ![simple game template](./Pictures/simple_game_template_3a.png){width=95%} -->
@@ -433,13 +440,27 @@ Participants spent a widely different length of time creating these graphics for
 <!-- The in-tool scaffolding within primary tool outlined in the previous section aligns with microworld concepts  of affordances guiding learners towards the exploration of key concepts and reduced reliance on facilitator instruction [@laurillard2020significance], an alignment explored in more detail in this chapters' discussion. -->
 
 
-While the in-tool scaffolding within the code template outlined in the previous section reduced reliance on facilitator instruction [@laurillard2020significance] for most learners, it did not assist participants in implementing new features or adding code structures to their games (e.g., the _Create_ stage of UMC). In P1 and early in P2, my guidance and often direct help was needed at this stage, causing delays and participant frustration due to my limited time with each participant or pair.
+The following section outlines an area of contradiction associated with  the introduction of supporting forms of documentation to scaffold game making process.  
+
+#### NEED - Tension
+
+NEEDS CLARIFYING - PERHAPS VIA U - M - C STAGES?
+
+Research on formative interventions using a CHAT approach outlines how systemic changes designed to address areas of contradiction are likely to introduce new tensions between systemic elements. In the previous section, the introduction of a half-baked template and the UMC approach had the unintended consequence of reducing the average working group size. A negative consequence of smaller group sizes and thus having more games being worked on was the increased demand on my time as a technical troubleshooter for code problems.
+
+Similarly addressing use of facilitator time, while the in-tool scaffolding within the code template outlined in the previous section accelerated production [@laurillard2020significance] for most learners,  participants required help adding code structures to their games which were needed to implement new features  (e.g., the _Create_ stage of UMC).
+
+In P1 resources to support implementation were minimal and not designed to be repurposed.
+
+In P1  my guidance and often direct help was needed at this stage, causing delays and participant frustration due to my limited time with each participant or pair.
+
 EXAMPLE?
 
-During the development period after P1, I reflected on the tension between learner agency, particularly the role of divergent participant learning paths, and the role of facilitator-led instruction and support, which reappeared consistently in my notes at this time. My reflection was partly driven by two attempts in P1 to deliver whole-class instruction on key coding concepts that I judged to be relevant to the wider group. My reflection on these interventions noted that learner engagement was low, and I surmised that this might be because learners viewed the instruction as not immediately relevant, alien to their favoured hands-on style of working, or as an interruption to the flow of their making activities. This observation aligns with the concept of just-in-time learning approaches within project-based learning [@riel1998education], where access to supporting documentation is provided based on learner need. During this development period, I struggled to reconcile my desire to support this responsive approach with requests from some parents in the feedback on P1, asking for background concepts and explanations of coding constructs.
+During the development period after P1, I reflected on the tension between learner agency, particularly the role of divergent participant learning paths, and the role of facilitator-led instruction and support, which reappeared consistently in my notes at this time. My reflection was partly driven by two attempts in P1 to deliver whole-class instruction on key coding concepts that I judged to be relevant to the wider group. My reflection on these interventions noted that learner engagement was low, and I surmised that this might be because learners viewed the instruction as not immediately relevant, alien to their favoured hands-on style of working, or as an interruption to the flow of their making activities.
 
-DESIGN 
-The design and implementation of supporting resources continued to evolve at a frantic pace at the start of P2, and I finally created three main sources of documentation: quick start cards, written instructions, and code snippets, which are outlined in the following section.
+Repenning et al. [find] frame this tension, as explored in Chapter 2, as the boredom caused by a principles first approach.
+
+In D2 and early in P2, I began to create resources to address this tension.
 
 <!-- or a nagivational , especially when combined with the disparate approach to graphical and audio asset creation, had resulted in an overly complex object. -->
 <!-- DOES THE LR EXPLORE THIS TENSION? -->
@@ -454,27 +475,45 @@ While step-by-step instruction could build up experience with tools and concepts
 <!-- Longer form step by step tutorials are common in computing education. Examples can be found in Code Academy, and in the education resources of RPi foundation. Many examples talking learners through steps to build a game can be found online with varied amount of explanation of underlying constructs and concepts. I started my journey learning JS games using some provided
 by Mozilla and the Phaser developers. -->
 
-#### The use of documentation to address contradictions
+#### (DESIGN AND RESULTS) The use of documentation to address contradictions
 
-This section explores the introduction of quick start cards, written instructions, and code snippets to address some of the contradictions in the learning design outlined above. _Quick start cards_, simple printouts highlighting the key affordances of the template involving: game mechanics such as movement, jumping, level design, and the final challenge of swapping out the look of one or more characters by designing pixel art and replacing the line of code that adds the asset to the game. These printed resources which highlighted key lines of code and demonstrated how they could be altered to impact game behaviour (see Figure 5.cards below), became a crucial resource for participants to get started with the starting template game from P2 onwards.
+
+The design and implementation of supporting resources evolved rapidly pace at the start of P2, resulting created three main sources of documentation: quick start cards, written instructions, and code snippets to address some of the contradictions in the learning design outlined above.
+
+##### Quick Start Cards
+
+_Quick start cards_ (see Figure 5.cards below) developed during P2, were A5 sized printouts highlighting the key affordances of the template involving: game mechanics such as movement, jumping, level design, and the final challenge of swapping out the look of one or more characters by designing pixel art and replacing the line of code that adds the asset to the game. These printed resources highlighted key lines of code and demonstrated how they could be altered to impact game behaviour.
+
+![Figure 5.cards - Example of a Quick start card](./Pictures/velocity_jscard.png){width=95%}
+
+The cards supported participants' initial interaction with the code in a way that strongly aligned with the use and modify stages of the UMC framework [@franklin_analysis_2020]. They allowed  participants to get started with the starting template game with less in person support from facilitators to the strongly scaffolded interaction with the code and the relatively minimal changes needed to the code.
+
+RESULT - The result of quick start cards in one-off sessions allowed very rapid creation of games with participants able to choose a level of difficulty and an area of interest. Thus in early stages, this process addressed the tension of providing documentation to support users in completing coding tasks while also facilitating choice over learner pathways.
+
+Also aligning with low floors principle.
+
+VERY LIMITED ANALYSIS HERE - SIGNPOST LATER EXPLORATION?
+
+A version of the quick start cards and a fuller description of their development by trainee teacher student helpers is available online and as part of Appendix.tech.
+
+<!-- ADD - A one off session at Manchester Libraries - description. -->
 
 <!--
 MOVE TO APPENDIX
 During the development period, I used the revised template design in a one-off game-making session with trainee computing students. This session culminated in a challenge to create an activity for a holiday event focused on creative game coding for families. In response, three students produced printable Word documents that highlighted key affordances of the design, mirroring my facilitation of their game-making session. Specifically,  -->
-
-
-
-![](./Pictures/velocity_jscard.png){width=95%}
-5.cards - Example of a Quick start card
-
-A version of the quick start cards is available online and as part of Appendix.tech. These _quick start cards_ supported participants' initial interaction with the code in a way that strongly aligned with the use and modify stages of the UMC framework [@franklin_analysis_2020]. The starting process addressed the tension of providing documentation to support users in completing coding tasks while also facilitating choice over learner pathways.
 
 ##### Structuring instructional tutorial resources and code snippets
 
 <!-- BELOW Initially I structured the book chapter participants working their way through the online resources. HOW -->
 
 <!-- While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context. -->
-To meet participants' requests for foundational coding knowledge, in the development period after P1, I developed an online manual with step-by-step chapters guiding users to code a core game template structure from first principles. While this linear format did not fully align with my choice-driven, face-to-face sessions, I envisioned it as supplementary reinforcement for learning outside of sessions. Writing these chapters revealed a technique that helped balance structured guidance with choice-driven learning. Each chapter demonstrated a code feature or principle through a playable game project based on the core game template, hosted in an online code playground. While the use of code examples or *snippets* is a common professional practice in problem-solving [@yang_stack_2017], their use by novice learners presents challenges related to relevance, consistency, and accessibility [@treude_understanding_2017]. Initially, I had encouraged participants to use code snippets from the Phaser website, but their difficulties understanding and applying these abstracted examples prompted me to create more tailored resources.
+
+
+The quick start intervention aligns with the concept of just-in-time learning approaches within project-based learning [@riel1998education], where access to supporting documentation is provided based on learner need.  This approach appeared to work well for most learners, in particular children. However, I struggled to reconcile this responsive approach with requests from some parents in the feedback on P1, asking for background concepts and explanations of coding constructs.
+
+To meet participants' requests for foundational coding knowledge, in the development period after P1, I developed an online manual with step-by-step chapters guiding users to code a core game template structure from first principles. While this linear format did not fully align with my choice-driven, face-to-face sessions, I envisioned it as supplementary reinforcement for learning outside of sessions.
+
+Writing these chapters revealed a technique that helped balance structured guidance with choice-driven learning. Each chapter demonstrated a code feature or principle through a playable game project based on the core game template, hosted in an online code playground. While the use of code examples or *snippets* is a common professional practice in problem-solving [@yang_stack_2017], their use by novice learners presents challenges related to relevance, consistency, and accessibility [@treude_understanding_2017]. Initially, I had encouraged participants to use code snippets from the Phaser website, but their difficulties understanding and applying these abstracted examples prompted me to create more tailored resources.
 
 I later extended this approach by creating stand-alone code snippets that illustrated requested game features as gameplay design patterns, such as *jumping on an enemy to zap it* and *making a moving enemy* (see Appendix.toby for an applied example). In the early stages of P2, learners accessed these projects through a simple Google document with links and brief descriptions. I continued developing new projects and producing printable instructions to support these code snippets, ensuring that each snippet linked to a descriptive chapter and vice versa. To help learners situate the code within the correct structure, all projects used the core game template and included only the new code required for each feature. I also experimented with ways to present these feature choices in an accessible, engaging format, which I describe in detail in Appendix 5.map. Recognising that multiple documentation formats sometimes led to confusion, I created a centralised hub to host both snippets and tutorial chapters, making navigation more intuitive and orienting documentation towards participants' gameplay experience.
 
@@ -495,7 +534,6 @@ Returning to the vignette of the child Toby described earlyer in this chapter we
 Thus, while not proof of overall efficacy of the use of code snippets the pattern of behaviour of Toby in the implementation of code is promising.
 IN TERMS OF ... -->
 
-
 Chapter 2 reviewed research on using collections of gameplay design patterns to support learning in game design [@holopainen2007teaching; @holopainen2011foundations; @eriksson_using_2019; @bjork_patterns_2005]. Thematic organisation of these patterns shows potential to foster a shared understanding of game-making concepts within a coding community [@holopainen2011foundations]. For the documentation hub described above, I grouped game design patterns into categories based on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003; @olsson2014conceptual], as well as participants’ evolving requests for game features. The final categorisation used in P4 is shown below in Table 5.x.
 
 
@@ -514,10 +552,22 @@ Table 5.x Categorisation of game design patterns used in P4.
 These elements were themed in a way which aligned with the MDA (mechanics, dynamics, and aesthetics) game element framework explored in Chapter 2. The evolution and of this theming is outlined in more detail in Appendix.tech.gameframework.
 NOTE - DEVELOP THIS A BIT AS IT IS EXPLORED IN CHAPTER 6.
 
-This section outlined two key types of secondary support tools developed in response to tensions arising after introducing the primary tools discussed in the previous section. While the code snippets, practical instructions, and chapters on core principles continued to pose some challenges (as seen in Vignette 6.1), the video data analysed in the following chapter shows an increase in participants’ practical ability to implement game features, suggesting an enhancement in their instrumental agency. In addition, participants' increase in agency extends beyond just instrumental application. In both P1 and P2, participants made specific requests for new features, which, when deemed suitable by me as the facilitator, were added to the menu of game design patterns. This choice-driven approach can be seen as both relational and authorial agency within the framework discussed in Chapter 3.
+#### RESULTS / IMPACT / SIGNPOSTING / LINK
 
-<!-- LINK & MORE SIGNPOSTING? -->
+The highlighted affordances of the template and the accompanying collection of code examples, as outlined in earlier sections, proved impactful. Despite their relative simplicity, these tools facilitated the creation of games with diverse and complex styles and themes, even at early stages.
 
+This section aligns with the pedagogy of UDL it allows a multiple forms of not only representation but also of action through the use of a collection facilitating choice.
+
+MORE ON THIS / SIGNPOSTING
+
+This section outlined two key types of secondary support tools developed in response to tensions arising after introducing the authoring tools discussed in the previous section.
+
+While the code snippets, practical instructions, and chapters on core principles continued to pose some challenges (as seen in Vignette 6.1), the video data analysed in the following chapter shows an increase in participants’ practical ability to implement game features.
+SIGNPOST WHERE THIS IS SHOWN. Vig 1. - IS THIS ALSO IN THE TABLE? LINKED THERE?
+
+The impact of the of choice-driven pathway and the ability for participants to input into the learning design through requests for new features is discussed in more detail in relation to the development of participant agency in Chapter 7.
+
+LINK?
 
 ### C3 - Responding to tensions and barriers in cultural aspects of the game making activity
 
@@ -526,46 +576,82 @@ This section outlined two key types of secondary support tools developed in resp
 <!-- **Participants stuck / demotivated : scope of ambition to high,   collaboration groups too big (transition),** -->
 <!-- These activities including starter games and game playing on entry and sharing of gaming experience of let laptops with games installed on them. -->
 
-Restructuring this section
 
-- physical computing elements - arcade boxes
-- use of playing games and identifying game elements (Moveable Game Jams (ensure this is described or linked to) to build language and concepts used to then  list of features serving as a mediating planning tool.
--
+Some participants experienced alienation during the transition to coding, stemming not only from challenges with tools but also from a sense of exclusion from the culture of coding, including cultural barriers to coding processes, as discussed in Chapter 2 [@kafai_constructionist_2015-1]. Issues of alienation from the coding process were particularly visible in P1 in my journal reflections and feedback interview data from P1 end reflections.
+
+In P1 accumulated tensions to do with alienation led one family to a crisis point. While a fuller description of this case study is available as Appendix 5.bee, a brief summary follows to illustrate key elements of this area of contradiction. Members of this family actively engaged in planning on paper and creating pixel art. However, tensions arose when the process turned to implementing planned changes via the code framework. Though technical challenges related to the use of tools played a role, this area of conflict was compounded by social and cultural factors, ultimately leading to the family's decision to step away from the activity.
+
+During participant feedback, the parent shared that in one session they had arrived, sat down and seen other participants grappling with the text code needed to enact planned changes. They felt alienated from this process of _hardcore coding_ (participants phrase). In addition one of they younger child's key ideas for game play, to control a bee avatar to explore a 3D landscape was not possible within the introduced 2D coding framework. In other feedback the parent, expressed a preference for more hands-on play and exploration of the tools of production before being required to make creative decisions.
+
+The tensions arising from the expectation to transition from non-coding creative activities to coding tools are depicted in Fig. 5.x below. This figure illustrates how the family’s positioning and alienation from the hardcore coding stage of the activity, is represented as tension.
 
 
-Some participants experienced alienation during the transition to coding, stemming not only from challenges with tools but also from a sense of exclusion from the culture of coding. This aligns with research on cultural barriers in coding processes, as discussed in Chapter 2 [@kafai_constructionist_2015-1]. In P1, as described above, I incorporated several non-coding techniques to foster positive affect and create an inclusive idioculture, aiming to reduce alienation from unfamiliar coding tools. While participant feedback on these techniques was positive, accumulated tensions led one family, described in the case study Appendix 5.bee, to disengage. Members of this family actively engaged in planning on paper and creating pixel art. However, tensions arose when the introduced coding framework did not support a desired feature, which was a bee design roaming a 3D landscape. During participant feedback, the parent expressed a preference for more hands-on play and exploration of the tools of production before being required to make creative decisions. This case study highlighted several key concerns for the design. Firstly, it underscored the fragility of learners’ positive affect during the transition from the planning and sketching phase to the coding phase of the game-making process. Secondly, it revealed the limitations of peer support, as fellow participants were often unable to address more complex issues independently. Lastly, it highlighted a potential imbalance in facilitator attention, as participants more confident in coding sometimes created complex problems requiring significant facilitator time, potentially leaving others feeling less valued.
+![Fig 5.x - Tensions involving cultural aspects of the game making process](./Pictures/At_tension_2_v2.png){width=95%}
 
-Though technical challenges related to the use of tools played a role, this area of conflict was compounded by social and cultural factors, ultimately leading to the family's decision to step away from the activity. The tensions arising from the expectation to transition from non-coding creative activities to coding tools are depicted in Fig. 5.x below. This figure illustrates how the family’s positioning and alienation from the coding environment, perceived as a space for _hardcore coding_ (participants phrase), represent a tension between the division of labour and the object of activity.
+The division of labour conflicted with the object of activity as previous divisions between coders and art creators no longer functioned in this stage of making. This then impacted on a tension between the community norms of hardcore coding their objective of a creative activity. A particular tension involved the coding tool introduced clashing with the goal to create a 3d roaming bee
 
-![tensions with cultural layers](./Pictures/At_tension_2_v2.png){width=95%}
+This case study highlighted a key concern for the design, that of the fragility of learners’ positive affect in early stages and in the transition from the planning and sketching phase to the coding phase of the game-making process.
 
-Fig 5.x - Tensions involving cultural aspects of the game making process
+<!-- DROP THIS BIT?
+Secondly, it revealed the limitations of peer support, as fellow participants were often unable to address more complex issues independently. Lastly, it highlighted a potential imbalance in facilitator attention, as participants more confident in coding sometimes created complex problems requiring significant facilitator time, potentially leaving others feeling less valued. -->
 
-My reflections on this conflict prompted several changes in the learning design to address factors situated within the plane of cultural activity. While Chapter 7 focuses on analysing participant reactions to the design from a more cultural perspective in greater depth, this section is limited to exploring the evolution of key learning design features addressing these issues, particularly the identification and fostering of social coding processes.
-<!-- MORE SIGNPOSTING? -->
+
+My reflections on this conflict prompted several changes in the learning design to address factors situated within the plane of cultural activity. This following section describes key learning design features addressing these issues, particularly the use of non-coding process and the fostering of social coding processes.
+
 
 <!--
 NOTE MOVE
 Chapter 6 analyses the potential of activities which help build the participants sense of their own identities of game makers in more depth, in particular in relation to dimensions of participant agency. -->
 
-#### Physical computing elements
+#### Playing games, identifying game elements & the use of physical materials
 
-- physical computing elements - arcade boxes
+In P1, I had incorporated several non-coding techniques to foster positive affect and create an inclusive idioculture, aiming to reduce alienation from unfamiliar coding tools.
 
-#### Playing games and identifying game elements
+The use of playing games and identifying game elements was adapted from a resource created for a New York youth program Moveable Game Jams to build language and concepts used to then  list of features serving as a mediating planning tool. This process, explored in Chapter 2 via the description of the process of GSM? or similar, served to build language and understandings of game design patterns. This later proved to be helpful in supporting a variety of mediational uses of GDP concepts which are explored in Chapter 6.
 
-- use of playing games and identifying game elements (Moveable Game Jams (ensure this is described or linked to) to build language and concepts used to then  list of features serving as a mediating planning tool.
+IS THIS IN AN APPENDIX - IS THERE A SCAN OF A A3 SHEET AVAILABLE?
+OR TABLE OF SPACE, MECHANICS ETC. ?
 
-#### Social coding processes
+The process of using physical element of art i.e. collages
 
-The introduction of a partially completed, half-baked game template had a notable effect on the division of labour within the group. This adjustment led to the formation of smaller, more autonomous group thus ameliorating some of the systemic conditions that contributed to the conflicts observed in P1.  The case study explored in Appendix.bee illustrates this highlighting a problematic division of labour alienated non-coding team members from the overall process. By allowing participants to work individually or with family members, these barriers to engagement were substantially reduced.
+Physical computing elements in the form of the arcade boxes
+
+
+#### Social coding processes - MIX OF NEED AND DESIGN AND RESULT?
+
+As explored above, from P2 onwards the use of a half-baked game template  led to the formation of smaller, more autonomous group in a way which ameliorated the a problematic division of labour outlined in the example above. The process also incorporated feedback suggesting on early hands on use of tools, thus both these barriers to engagement were substantially reduced.
+
+In addition, the parent A's also share other reflections on divisions of labour and working community norms in P1 feedback
 ROLE OF PLAYTESTING IN THIS? AND A'S COMMENT ON PARENTS GETTING IN THE WAY?
 
 <!-- The changes in tools and documentation introduced in P2, as described earlier, were initially implemented to address technical issues but also had a significant impact on the cultural dynamics of the game-making group.  -->
 
-The highlighted affordances of the template and the accompanying collection of code examples, as outlined in earlier sections, proved impactful. Despite their relative simplicity, these tools facilitated the creation of games with diverse and complex styles and themes, even at early stages. The provision of a functioning starter game significantly increased the amount of time participants spent playtesting both their own and others' games. Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 6.1 for a clear example).
 
-In response, I prioritised supporting participants in resolving these issues to ensure their games were functional and playable. By P2, playtesting had evolved into a source of rich, productive peer social interactions. Observing this, I recognised the potential of these interactions and, in preparation for P3, aimed to intervene more strategically and gently to nurture and encourage these emergent patterns of peer collaboration and engagement.
+The provision of a functioning starter game significantly increased the amount of time participants spent playtesting both their own and others' games.
+
+Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 6.1 for a clear example).
+
+In response, I prioritised supporting participants in resolving these issues to ensure their games were functional and playable.
+
+By P2, playtesting had evolved into a source of rich, productive peer social interactions. Observing this, I recognised the potential of these interactions and, in preparation for P3, aimed to intervene more strategically and gently to nurture and encourage these emergent patterns of peer collaboration and engagement.
+
+**Use of drama narrative and side missions to encourage varied creative practices**
+
+In P3, I introduced a drama-based scenario to guide the game creation process. This scenario revolved around an alien making contact with the group to request the creation of games as a means to judge the worth of the human race (see Vignette 5.alien). Within this fictional framework, participants engaged in side-missions, some of which were public while others remained secret (see Table 5.sidemissions). The introduction of this drama and the accompanying social missions aimed to reinforce the social and cultural dimensions of the activity, building on patterns observed during semi-structured playtesting in earlier phases. These missions were designed to encourage behaviours that fostered community-focused interactions. They included activities not directly related to the game-making process but rather centred on exploring and engaging with others' games and adopting a playful, exploratory approach. I had previously identified such behaviours as crucial for sustaining positive affect and fostering identification with the ongoing group game-making process.  The missions were printed on cards, and participants were given one of each type during the first half of the initial two sessions. An sample of the social and secret missions is provided below, with the full table available in Vignette 5.alien.
+
+| Your Alien Mission (social)          | Your Secret Alien Mission:              
+|----------------|----------------|
+| Find out the names of 3 games that are being made.  | Change the variables at the start of someone else’s game to make it play in a funny way.    |
+| Make a list of characters in two other games being made.   | Change of the images in someone else’s project to a totally different image and see if they notice.    |
+| Find out the favourite computer games of 4 people.   | Change the level design of the first level of someone else’s project to make it impossible but try to change as little as possible to do that.   |
+
+Table 5.sidemissions - an extract of side missions given as part of the drama scenario
+
+#### SUMMARY AND LINK
+
+While this provides an incomplete picture of the missions and drama process, due to space limitations, these side missions are presented in this chapter to offer an overview of the varied tools used. A more detailed exploration of the development of participant agency in relation to these social missions and playtesting is provided in Chapter 7.
+
+MORE SIGNPOSTING? Chapter 7 focuses on analysing participant reactions to the design from a more cultural perspective in greater depth,
 
 
 <!-- SHIFT? - It is notable that the create stage of this model does not involve starting a totally new game from scratch as is imagined in some interpretations of that model. Due to the complexity of the code base and framework the process of creating a new GDP within the game as a suitable level of challenge. -->
@@ -582,7 +668,6 @@ To address issues of a practical nature to get starting coding, a restriction in
 
  -->
 
-##### Use of side missions to encourage varied creative practices
 
 
 <!--
@@ -595,8 +680,6 @@ In appendix 5.playertypes, I outline the use of a game to explore different game
 To communicate this approach, as well as starting game activity, I incorporated the question into an animation of the resources home page (see illustration 4.x). In P3 the underlying ideas were incorporated into the process drama described in the next section.
  -->
 
-In P3, I introduced a drama-based scenario to guide the game creation process. This scenario revolved around an alien making contact with the group to request the creation of games as a means to judge the worth of the human race (see Vignette 5.alien). Within this fictional framework, participants engaged in side-missions, some of which were public while others remained secret (see Table 5.sidemissions). The introduction of this drama and the accompanying social missions aimed to reinforce the social and cultural dimensions of the activity, building on patterns observed during semi-structured playtesting in earlier phases. These missions were designed to encourage behaviours that fostered community-focused interactions. They included activities not directly related to the game-making process but rather centred on exploring and engaging with others' games and adopting a playful, exploratory approach. I had previously identified such behaviours as crucial for sustaining positive affect and fostering identification with the ongoing group game-making process.  The missions were printed on cards, and participants were given one of each type during the first half of the initial two sessions. An sample of the social and secret missions is provided below, with the full table available in Vignette 5.alien.
-
 <!-- AN EXAMPLE HELPFUL? -->
 
 <!-- NOTE - PERHAPS MOVE TO APPENDIX OR DESIGN CHAPTER -->
@@ -604,15 +687,8 @@ In P3, I introduced a drama-based scenario to guide the game creation process. T
 https://drive.google.com/drive/folders/1I8D_axlOUAFIGarrnzGV5mSCe2MDCDso -->
 
 
-| Your Alien Mission (social)          | Your Secret Alien Mission:              
-|----------------|----------------|
-| Find out the names of 3 games that are being made.  | Change the variables at the start of someone else’s game to make it play in a funny way.    |
-| Make a list of characters in two other games being made.   | Change of the images in someone else’s project to a totally different image and see if they notice.    |
-| Find out the favourite computer games of 4 people.   | Change the level design of the first level of someone else’s project to make it impossible but try to change as little as possible to do that.   |
 
-Table 5.sidemissions - an extract of side missions given as part of the drama scenario
-
-While this provides an incomplete picture of the missions and drama process, due to space limitations, these side missions are presented in this chapter to offer an overview of the varied tools used. A more detailed exploration of the development of participant agency in relation to these social missions and playtesting is provided in Chapter 7. Within the framework of 3GAT, these missions can be understood as tools used by participants to develop agency through the process of double stimulation, a theme which is continued in the discussion section of this chapter.
+<!-- Within the framework of 3GAT, these missions can be understood as tools used by participants to develop agency through the process of double stimulation, a theme which is continued in the discussion section of this chapter. -->
 
 <!-- I have de-prioritised the detail of the drama process element of the intervention of P3, an aspect that  -->
 <!-- I will return to in the conclusion of this thesis when outlining possible next steps of research. -->
